--- a/Goyang_Public_Bicycle/data/.gitattributes
+++ b/Goyang_Public_Bicycle/data/.gitattributes
@@ -1,2 +1,1 @@
-01.운영이력.csv filter=lfs diff=lfs merge=lfs -text
-14.고양시_지적도.geojson filter=lfs diff=lfs merge=lfs -text
+goyang_public_bicycle_data.zip filter=lfs diff=lfs merge=lfs -text
